2009-12-15

	initialized renjian-python
	
	