@@ -1,3 +1,7 @@
+2010-01-13
+    
+    renjian-python now can be used
+
 2009-12-15
 
 	initialized renjian-python
